--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,12 +8,9 @@
 
 
 <form>
-    <input id="person-id"> - Id<br>
-    <input id="fname"> - First Name<br>
-    <input id="lname"> - Last Name<br>
-    <button onclick="create(event)">Create Person</button>
-    <button onclick="read(event)">Read By Id</button>
-    <button onclick="readAll(event)">Read All</button>
-    <button onclick="update(event)">Update</button>
-    <button onclick="destroy(event)">Delete</button>
+    <input id="projectName"> - Project name<br/>
+    <input id="input"> - Input<br/>
+    <input id="output"> - Output<br/>
+    <input id="expected"> - Expected<br/>
+    <button onclick="create(event)">Ask question</button>
 </form>
