updated assistant to have a response box

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,3 +14,9 @@
     <input id="expected"> - Expected<br/>
     <button onclick="create(event)">Ask question</button>
 </form>
+
+<textarea id="prompt">
+</textarea>
+
+<textarea id="prompt-response">
+</textarea>
