updated front end

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,11 +12,12 @@
     <input id="input"> - Input<br/>
     <input id="output"> - Output<br/>
     <input id="expected"> - Expected<br/>
-    <button onclick="create(event)">Ask question</button>
+    <button onclick="getPrompt(event)">Get The Question</button>
+    <button onclick="getResponse(event)">Get The Response</button>
 </form>
 
-<textarea id="prompt">
-</textarea>
+<p id="prompt">
+</p>
 
-<textarea id="prompt-response">
-</textarea>
+<p id="response">
+</p>
